--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <title>Typology - Minimalist Blog & Text Based Theme for WordPress Preview - ThemeForest</title>
   </head>
   <body>
-    <div class="w-100 d-flex justify-content-center show_mobile">
+    <div class="w-100 d-none text-align-center show_mobile">
       <h1>Website not supported on mobile devices</h1>
     </div>
     <noscript>You need to enable JavaScript to run this app.</noscript>
