--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <div class="w-100 d-none text-align-center show_mobile">
-      <h1>Website not supported on mobile devices</h1>
+      <h1 class="show_mobile">Website not supported on mobile devices</h1>
     </div>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
