--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,8 @@
     <title>Typology - Minimalist Blog & Text Based Theme for WordPress Preview - ThemeForest</title>
   </head>
   <body>
-    <div class="w-100 d-none text-align-center show_mobile">
-      <h1 class="show_mobile">Website not supported on mobile devices</h1>
+    <div class="w-100 d-none text-align-center show_mobile pt-5">
+      <h1 class="show_mobile mt-5">Website not supported on mobile devices</h1>
     </div>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
