--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <div class="w-100 h-100 text-align-center show_mobile pt-5 bg-dark">
-      <h1 class="show_mobile mt-5 bg-dark">Website not supported on mobile devices</h1>
+      <h1 class="show_mobile mt-5">Website not supported on mobile devices</h1>
     </div>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
